Added Authorize middle-ware authentication to swagger ui
